Fix type errors when moving to toList()
By reverting back to collect